load("//rule:merge_library.bzl", "merge_library_group")

merge_library_group(
    name = "ui",
    visibility = ["//touchcontroller:__subpackages__"],
    deps = [
        "//touchcontroller/common/ui/chat/model",
        "//touchcontroller/common/ui/chat/screen",
        "//touchcontroller/common/ui/chat/state",
        "//touchcontroller/common/ui/component/model",
        "//touchcontroller/common/ui/component/screen",
        "//touchcontroller/common/ui/config/model",
        "//touchcontroller/common/ui/config/screen",
        "//touchcontroller/common/ui/config/state",
        "//touchcontroller/common/ui/config/tab",
        "//touchcontroller/common/ui/config/tab/about",
        "//touchcontroller/common/ui/config/tab/about/model",
        "//touchcontroller/common/ui/config/tab/all",
        "//touchcontroller/common/ui/config/tab/component",
        "//touchcontroller/common/ui/config/tab/general",
        "//touchcontroller/common/ui/config/tab/item",
        "//touchcontroller/common/ui/config/tab/layout/custom",
        "//touchcontroller/common/ui/config/tab/layout/custom/all",
        "//touchcontroller/common/ui/config/tab/layout/custom/layers",
        "//touchcontroller/common/ui/config/tab/layout/custom/layers/model",
        "//touchcontroller/common/ui/config/tab/layout/custom/layers/state",
        "//touchcontroller/common/ui/config/tab/layout/custom/model",
        "//touchcontroller/common/ui/config/tab/layout/custom/presets",
        "//touchcontroller/common/ui/config/tab/layout/custom/presets/model",
        "//touchcontroller/common/ui/config/tab/layout/custom/presets/state",
        "//touchcontroller/common/ui/config/tab/layout/custom/properties",
        "//touchcontroller/common/ui/config/tab/layout/custom/state",
        "//touchcontroller/common/ui/config/tab/layout/custom/tab",
        "//touchcontroller/common/ui/config/tab/layout/custom/widgets",
        "//touchcontroller/common/ui/config/tab/layout/custom/widgets/model",
        "//touchcontroller/common/ui/config/tab/layout/custom/widgets/state",
        "//touchcontroller/common/ui/config/tab/layout/preset",
        "//touchcontroller/common/ui/config/tab/layout/preset/model",
        "//touchcontroller/common/ui/config/tab/layout/provider",
        "//touchcontroller/common/ui/config/tab/layout/provider:provider_impl",
        "//touchcontroller/common/ui/config/tab/platform",
        "//touchcontroller/common/ui/config/tab/status",
        "//touchcontroller/common/ui/config/tab/status/model",
        "//touchcontroller/common/ui/config/tab/status/state",
        "//touchcontroller/common/ui/control",
        "//touchcontroller/common/ui/entitypicker",
        "//touchcontroller/common/ui/importpreset/model",
        "//touchcontroller/common/ui/importpreset/screen",
        "//touchcontroller/common/ui/item/model",
        "//touchcontroller/common/ui/item/screen",
        "//touchcontroller/common/ui/layer/model",
        "//touchcontroller/common/ui/layer/screen",
        "//touchcontroller/common/ui/layer/state",
        "//touchcontroller/common/ui/layer/tab",
        "//touchcontroller/common/ui/layer/tab/all",
        "//touchcontroller/common/ui/layer/tab/builtin",
        "//touchcontroller/common/ui/layer/tab/custom",
        "//touchcontroller/common/ui/layer/tab/custom/model",
        "//touchcontroller/common/ui/layer/tab/custom/state",
        "//touchcontroller/common/ui/layer/tab/holdingitem",
        "//touchcontroller/common/ui/layer/tab/ridingentity",
        "//touchcontroller/common/ui/layer/tab/selectedentity",
        "//touchcontroller/common/ui/license",
        "//touchcontroller/common/ui/model",
        "//touchcontroller/common/ui/preset",
        "//touchcontroller/common/ui/theme",
        "//touchcontroller/common/ui/widget",
        "//touchcontroller/common/ui/widget/navigation",
        "//touchcontroller/common/ui/widget/raw",
    ],
)
