load("//rule:text_resource_jar.bzl", "text_resource_jar")
load("//rule/touchcontroller:text_binding.bzl", "kt_text_binding_lib")

kt_text_binding_lib(
    name = "text_binding",
    package_name = "top.fifthlight.touchcontroller.assets",
    class_name = "Texts",
    input = "en_us.json",
    visibility = ["//touchcontroller:__subpackages__"],
)

text_resource_jar(
    name = "lang",
    srcs = glob(["*.json"]),
    format = "json",
    resource_prefix = "assets/touchcontroller/lang",
    visibility = ["//touchcontroller:__subpackages__"],
)

text_resource_jar(
    name = "lang_legacy",
    srcs = glob(["*.json"]),
    format = "lang",
    resource_prefix = "assets/touchcontroller/lang",
    visibility = ["//touchcontroller:__subpackages__"],
)
