load("@bazel_skylib//rules:expand_template.bzl", "expand_template")
load("//rule:text_resource_jar.bzl", "text_resource_jar")
load("//rule/neoforge:mod_toml_jar.bzl", "neoforge_mod_toml_jar")
load("//rule/touchcontroller:text_binding.bzl", "kt_text_binding_lib")
load("//touchcontroller:properties.bzl", "touchcontroller_description", "touchcontroller_homepage", "touchcontroller_issue_tracker", "touchcontroller_language_authors", "touchcontroller_license", "touchcontroller_source", "touchcontroller_version")

kt_text_binding_lib(
    name = "text_binding",
    package_name = "top.fifthlight.touchcontroller.assets.lang",
    class_name = "Texts",
    input = "en_us.json",
    visibility = ["//touchcontroller:__subpackages__"],
)

neoforge_mod_toml_jar(
    name = "neoforge_mod_toml",
    src = "resources/META-INF/neoforge.mods.toml",
    resource_strip_prefix = "touchcontroller/resources/lang",
    substitutions = {
        "${version}": touchcontroller_version,
        "${license}": touchcontroller_license,
        "${home_page}": touchcontroller_homepage,
        "${sources_page}": touchcontroller_source,
        "${issue_tracker}": touchcontroller_issue_tracker,
        "${name}": "TouchController Languages",
        "${description}": "Language files for TouchController.",
        "${authors}": ", ".join(touchcontroller_language_authors),
    },
)

expand_template(
    name = "fabric_mod_json_modern",
    out = "modern_expanded/fabric.mod.json",
    substitutions = {
        "${version}": touchcontroller_version,
        "${license}": touchcontroller_license,
        "${home_page}": touchcontroller_homepage,
        "${sources_page}": touchcontroller_source,
        "${issue_tracker}": touchcontroller_issue_tracker,
        '"language_authors_array"': json.encode(touchcontroller_language_authors),
    },
    template = "modern/fabric.mod.json",
)

text_resource_jar(
    name = "lang",
    srcs = glob(["*.json"]),
    format = "json",
    resource_jars = [
        ":neoforge_mod_toml",
        "//touchcontroller/resources/texture:icon_jar",
    ],
    resource_prefix = "assets/touchcontroller/lang",
    resources = {
        ":fabric_mod_json_modern": "touchcontroller/resources/lang/modern_expanded",
    },
    visibility = ["//touchcontroller:__subpackages__"],
)

text_resource_jar(
    name = "lang_legacy",
    srcs = glob(["*.json"]),
    format = "lang",
    resource_prefix = "assets/touchcontroller/lang",
    visibility = ["//touchcontroller:__subpackages__"],
)
