load("@bazel_skylib//rules:expand_template.bzl", "expand_template")
load("//rule:jar.bzl", "jar")
load("//rule:merge_library.bzl", "merge_library_jar")
load("//rule/combine:library.bzl", "kt_texture_lib")
load("//rule/combine:minecraft.bzl", "atlas_pack", "kt_atlas_lib", "kt_vanilla_lib", "vanilla_pack")
load("//rule/combine:texture.bzl", "texture", "texture_group", "texture_lib")
load("//rule/touchcontroller:control_texture_set.bzl", "kt_control_texture_set_lib", "kt_empty_texture_lib")
load("//touchcontroller:properties.bzl", "touchcontroller_homepage", "touchcontroller_issue_tracker", "touchcontroller_license", "touchcontroller_source", "touchcontroller_texture_authors", "touchcontroller_version")

texture(
    name = "icon_texture",
    srcs = glob(["icon/*.png"]),
)

texture(
    name = "background_texture",
    srcs = glob(["background/*.png"]),
    background = True,
)

texture_group(
    name = "texture_group",
    deps = [
        ":background_texture",
        ":icon_texture",
        "//touchcontroller/resources/texture/empty",
    ],
)

texture_lib(
    name = "texture",
    class_name = "Textures",
    package = "top.fifthlight.touchcontroller.assets.texture",
    prefix = "ui",
    deps = [
        ":texture_group",
        "//touchcontroller/resources/texture/control",
    ],
)

kt_texture_lib(
    name = "texture_lib",
    dep = ":texture",
    visibility = ["//touchcontroller:__subpackages__"],
)

expand_template(
    name = "fabric_mod_json",
    out = "expanded/fabric.mod.json",
    substitutions = {
        "${version}": touchcontroller_version,
        "${license}": touchcontroller_license,
        "${home_page}": touchcontroller_homepage,
        "${sources_page}": touchcontroller_source,
        "${issue_tracker}": touchcontroller_issue_tracker,
        '"texture_authors_array"': json.encode(touchcontroller_texture_authors),
    },
    template = "resources/fabric.mod.json",
)

merge_library_jar(
    name = "texture_common",
    aspect = True,
    aspect_class = "top.fifthlight.touchcontroller.assets.texture.AspectProvider",
    resources = {":fabric_mod_json": "."},
    visibility = ["//touchcontroller:__subpackages__"],
    deps = [
        ":icon_jar",
        ":texture_lib",
    ],
)

kt_control_texture_set_lib(
    name = "texture_set_lib",
    control_group = "//touchcontroller/resources/texture/control",
    kt_text_binding_lib = "//touchcontroller/resources/lang:text_binding",
    kt_texture_lib = ":texture_lib",
    package = "top.fifthlight.touchcontroller.assets.texture.set",
    text_binding_class_name = "Texts",
    text_binding_package = "top.fifthlight.touchcontroller.assets.lang",
    texture_items_class_name = "BuiltInTextureItems",
    texture_lib = ":texture",
    texture_sets_class_name = "BuiltInTextureSets",
    visibility = ["//touchcontroller:__subpackages__"],
)

kt_empty_texture_lib(
    name = "empty_texture_lib",
    class_name = "EmptyTexture",
    empty_texture_group = "//touchcontroller/resources/texture/empty",
    kt_text_binding_lib = "//touchcontroller/resources/lang:text_binding",
    kt_texture_lib = ":texture_lib",
    package = "top.fifthlight.touchcontroller.assets.texture.empty",
    text_binding_class_name = "Texts",
    text_binding_package = "top.fifthlight.touchcontroller.assets.lang",
    texture_lib = ":texture",
    visibility = ["//touchcontroller:__subpackages__"],
)

vanilla_pack(
    name = "vanilla_pack",
    dep = ":texture",
    namespace = "touchcontroller",
    visibility = ["//touchcontroller:__subpackages__"],
)

kt_vanilla_lib(
    name = "vanilla_lib",
    dep = ":texture_lib",
    pack = ":vanilla_pack",
    package = "top.fifthlight.touchcontroller.assets.texture.vanilla",
    resource_jars = [
        ":icon_jar",
        ":vanilla_pack",
    ],
    visibility = ["//touchcontroller:__subpackages__"],
)

expand_template(
    name = "fabric_mod_json_vanilla",
    out = "vanilla_expanded/fabric.mod.json",
    substitutions = {
        "${version}": touchcontroller_version,
        "${license}": touchcontroller_license,
        "${home_page}": touchcontroller_homepage,
        "${sources_page}": touchcontroller_source,
        "${issue_tracker}": touchcontroller_issue_tracker,
        '"texture_authors_array"': json.encode(touchcontroller_texture_authors),
    },
    template = "resources/fabric.mod.vanilla.json",
)

merge_library_jar(
    name = "texture_vanilla",
    aspect_impl_package_suffix = "vanilla",
    aspects = [":texture_common"],
    resources = {":fabric_mod_json_vanilla": "."},
    visibility = ["//touchcontroller:__subpackages__"],
    deps = [
        ":icon_jar",
        ":vanilla_lib",
    ],
)

atlas_pack(
    name = "atlas_pack",
    dep = ":texture",
    height = 512,
    namespace = "touchcontroller",
    visibility = ["//touchcontroller:__subpackages__"],
    width = 512,
)

kt_atlas_lib(
    name = "atlas_lib",
    dep = ":texture_lib",
    pack = ":atlas_pack",
    package = "top.fifthlight.touchcontroller.assets.texture.atlas",
    resource_jars = [
        ":icon_jar",
        ":atlas_pack",
    ],
    visibility = ["//touchcontroller:__subpackages__"],
)

expand_template(
    name = "fabric_mod_json_atlas",
    out = "atlas_expanded/fabric.mod.json",
    substitutions = {
        "${version}": touchcontroller_version,
        "${license}": touchcontroller_license,
        "${home_page}": touchcontroller_homepage,
        "${sources_page}": touchcontroller_source,
        "${issue_tracker}": touchcontroller_issue_tracker,
        '"texture_authors_array"': json.encode(touchcontroller_texture_authors),
    },
    template = "resources/fabric.mod.atlas.json",
)

merge_library_jar(
    name = "texture_atlas",
    aspect_impl_package_suffix = "atlas",
    aspects = [":texture_common"],
    resources = {":fabric_mod_json_atlas": "."},
    visibility = ["//touchcontroller:__subpackages__"],
    deps = [
        ":atlas_lib",
        ":icon_jar",
    ],
)

alias(
    name = "icon",
    actual = "icon.png",
    visibility = ["//touchcontroller:__subpackages__"],
)

jar(
    name = "icon_jar",
    resource_prefix = "assets/touchcontroller/textures",
    resources = [":icon"],
    visibility = ["//touchcontroller:__subpackages__"],
)
