load("@bazel_skylib//rules:expand_template.bzl", "expand_template")
load("//combine:libraries.bzl", "combine_fabric_libraries")
load("//combine:properties.bzl", "combine_description", "combine_home_page", "combine_issue_tracker", "combine_license", "combine_sources_page", "combine_version")
load("//rule:jar.bzl", "jar")
load("//rule:merge_jar.bzl", "merge_jar")
load("//rule/fabric:merge_jij.bzl", "fabric_merge_jij")

expand_template(
    name = "fabric_mod_json",
    out = "fabric.mod.json",
    substitutions = {
        "${version}": combine_version,
        "${license}": combine_license,
        "${description}": combine_description,
        "${home_page}": combine_home_page,
        "${sources_page}": combine_sources_page,
        "${issue_tracker}": combine_issue_tracker,
    },
    template = "resources/fabric.mod.json",
    visibility = ["//combine/backend/minecraft:__pkg__"],
)

jar(
    name = "meta_jar",
    resources = [":fabric_mod_json"],
    visibility = ["//visibility:public"],
)

merge_jar(
    name = "fabric_unmerged",
    resources = {
        "//combine/resources:icon": ".",
    },
    visibility = ["//visibility:public"],
    deps = [
        ":meta_jar",
        "//combine/backend/minecraft:minecraft_unmerged",
    ],
)

fabric_merge_jij(
    name = "fabric",
    input = ":fabric_unmerged",
    visibility = ["//visibility:public"],
    deps = {
        "//combine/backend/minecraft/fabric/1.21.1": "combine-1-21-1:=",
        "//combine/backend/minecraft/fabric/1.21.8": "combine-1-21-8:=",
        "//combine/backend/minecraft/fabric/1.21.10": "combine-1-21-10:=",
        "//combine/backend/minecraft/fabric/1.21.11": "combine-1-21-11:=",
        "//combine/backend/minecraft/fabric/26.1": "combine-26-1:=",
        "//combine/backend/minecraft/fabric/26.2": "combine-26-2:=",
    } | combine_fabric_libraries,
)
