load("//rule:merge_library.bzl", "merge_library_group")

merge_library_group(
    name = "1.21.8",
    visibility = ["//visibility:public"],
    deps = [
        "//combine/backend/minecraft/clipboard/1.21.8",
        "//combine/backend/minecraft/dispatcher/1.21.8",
        "//combine/backend/minecraft/drawable/1.21.8",
        "//combine/backend/minecraft/hittest/1.21.8",
        "//combine/backend/minecraft/identifier/1.21.8",
        "//combine/backend/minecraft/input/1.21.8",
        "//combine/backend/minecraft/item/1.21.8",
        "//combine/backend/minecraft/keycode/1.21.8",
        "//combine/backend/minecraft/render/1.21.8",
        "//combine/backend/minecraft/screen/1.21.8",
        "//combine/backend/minecraft/sound/1.21.8",
        "//combine/backend/minecraft/text/1.21.8",
        "//combine/backend/minecraft/textbuilder/1.21.8",
        "//combine/backend/minecraft/textmeasurer/1.21.8",
    ],
)

merge_library_group(
    name = "1.21.10",
    visibility = ["//visibility:public"],
    deps = [
        "//combine/backend/minecraft/clipboard/1.21.10",
        "//combine/backend/minecraft/dispatcher/1.21.10",
        "//combine/backend/minecraft/drawable/1.21.10",
        "//combine/backend/minecraft/hittest/1.21.10",
        "//combine/backend/minecraft/identifier/1.21.10",
        "//combine/backend/minecraft/input/1.21.10",
        "//combine/backend/minecraft/item/1.21.10",
        "//combine/backend/minecraft/keycode/1.21.10",
        "//combine/backend/minecraft/render/1.21.10",
        "//combine/backend/minecraft/screen/1.21.10",
        "//combine/backend/minecraft/sound/1.21.10",
        "//combine/backend/minecraft/text/1.21.10",
        "//combine/backend/minecraft/textbuilder/1.21.10",
        "//combine/backend/minecraft/textmeasurer/1.21.10",
    ],
)

merge_library_group(
    name = "1.21.11",
    visibility = ["//visibility:public"],
    deps = [
        "//combine/backend/minecraft/clipboard/1.21.11",
        "//combine/backend/minecraft/dispatcher/1.21.11",
        "//combine/backend/minecraft/drawable/1.21.11",
        "//combine/backend/minecraft/hittest/1.21.11",
        "//combine/backend/minecraft/identifier/1.21.11",
        "//combine/backend/minecraft/input/1.21.11",
        "//combine/backend/minecraft/item/1.21.11",
        "//combine/backend/minecraft/keycode/1.21.11",
        "//combine/backend/minecraft/render/1.21.11",
        "//combine/backend/minecraft/screen/1.21.11",
        "//combine/backend/minecraft/sound/1.21.11",
        "//combine/backend/minecraft/text/1.21.11",
        "//combine/backend/minecraft/textbuilder/1.21.11",
        "//combine/backend/minecraft/textmeasurer/1.21.11",
    ],
)

merge_library_group(
    name = "26.1",
    visibility = ["//visibility:public"],
    deps = [
        "//combine/backend/minecraft/clipboard/26.1",
        "//combine/backend/minecraft/dispatcher/26.1",
        "//combine/backend/minecraft/drawable/26.1",
        "//combine/backend/minecraft/hittest/26.1",
        "//combine/backend/minecraft/identifier/26.1",
        "//combine/backend/minecraft/input/26.1",
        "//combine/backend/minecraft/item/26.1",
        "//combine/backend/minecraft/keycode/26.1",
        "//combine/backend/minecraft/render/26.1",
        "//combine/backend/minecraft/screen/26.1",
        "//combine/backend/minecraft/sound/26.1",
        "//combine/backend/minecraft/text/26.1",
        "//combine/backend/minecraft/textbuilder/26.1",
        "//combine/backend/minecraft/textmeasurer/26.1",
    ],
)

merge_library_group(
    name = "26.2",
    visibility = ["//visibility:public"],
    deps = [
        "//combine/backend/minecraft/clipboard/26.2",
        "//combine/backend/minecraft/dispatcher/26.2",
        "//combine/backend/minecraft/drawable/26.2",
        "//combine/backend/minecraft/hittest/26.2",
        "//combine/backend/minecraft/identifier/26.2",
        "//combine/backend/minecraft/input/26.2",
        "//combine/backend/minecraft/item/26.2",
        "//combine/backend/minecraft/keycode/26.2",
        "//combine/backend/minecraft/render/26.2",
        "//combine/backend/minecraft/screen/26.2",
        "//combine/backend/minecraft/sound/26.2",
        "//combine/backend/minecraft/text/26.2",
        "//combine/backend/minecraft/textbuilder/26.2",
        "//combine/backend/minecraft/textmeasurer/26.2",
    ],
)
