load("//rule:merge_library.bzl", "kt_merge_library")

kt_merge_library(
    name = "widget",
    srcs = glob(["*.kt"]),
    merge_deps = [
        "//touchcontroller/common/api/text",
        "//touchcontroller/common/api/texture",
        "//touchcontroller/common/api/trigger",
        "//touchcontroller/common/assets",
        "//touchcontroller/common/control/action",
        "//touchcontroller/common/control/builtin",
        "//touchcontroller/common/control/property",
        "//touchcontroller/common/control/widget/custom",
        "//touchcontroller/common/layout/align",
    ],
    visibility = ["//touchcontroller:__subpackages__"],
    deps = [
        "//combine/core/data",
        "//touchcontroller/api",
        "//touchcontroller/common/control",
    ],
)
